# Valera3D

./: .gitmodules  CMakeLists.txt  README.md  V3d.xml  V3d_UML.xml  project_win32.bat
libs/glew/: CMakeLists.txt
project/win32/: Valera3D.sdf  Valera3D.sln  ValeraEngine.psess  ValeraEngine.vcxproj  ValeraEngine.vcxproj.filters
project/win32/Valera3D/: Valera3D.sdf  Valera3D.sln
project/win32/Valera3D/ValeraEngine/: ValeraEngine.vcxproj  ValeraEngine.vcxproj.filters
project/win32/ValeraEngine/: ReadMe.txt  ValeraEngine.cpp  stdafx.cpp
project/win32/libs/: ValeraEngine.lib
source/: InputReceiver.cpp  InputReceiver.h  KeyCodes.h  Object.cpp  Object.h  Singleton.h  Test.h  Valera3D.h  ValeraConfig.h  ValeraEngine.cpp  ValeraEngine.h  common.h
source/context/: DriverContext.cpp  DriverContext.h  DriverContextGL.cpp  DriverContextGL.h
source/core/: Dimension2D.h  Math.h  Matrix2D.h  Matrix3D.h  Matrix4D.h  Vector2D.h  Vector3D.h  Vector4D.h
source/driver/: DriverContext.cpp  DriverContext.h  DriverContextGL.cpp  DriverContextGL.h
source/event/: Event.cpp  Event.h  EventHandler.h  EventManager.cpp  EventManager.h  InputEventHandler.cpp  InputEventHandler.h  InputEventManager.cpp  InputEventManager.h  InputEvents.cpp  InputEvents.h  KeyCodes.h
source/platform/: Platform.cpp  Platform.h  PlatformLinux.cpp  PlatformLinux.h  PlatformMacOSX.h  PlatformMacOSX.mm  PlatformManager.cpp  PlatformManager.h  PlatformMgr.cpp  PlatformMgr.h  PlatformWin32.cpp  PlatformWin32.h  Window.cpp  Window.h  WindowWin32.cpp  WindowWin32.h
source/renderer/: Material.cpp  Material.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUniform.cpp  ShaderUniform.h  Texture.cpp  Texture.h
source/scene/: Node.cpp  Node.h  ResourceDecoder.cpp  ResourceDecoder.h  TextureManager.cpp  TextureManager.h  TextureMgr.cpp  TextureMgr.h
source/stream/: FileStream.cpp  FileStream.h  IStream.h  Resource.cpp  Resource.h
source/utils/: Logger.cpp  Logger.h
tests/CreateWindow/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  CreateWindow.vcxproj  MyApplication.cpp  MyApplication.h
tests/CreateWindow/msvc/: CreateWindow.vcxproj  CreateWindow.vcxproj.filters
tests/Test_1/: CMakeLists.txt  Test_1.cpp  Test_1.vcxproj  stdafx.cpp
tests/Test_1/Test_1/: ReadMe.txt  Test_1.cpp  Test_1.vcxproj.filters
tests/Test_1/msvc/: Test_1.vcxproj  Test_1.vcxproj.filters
tests/msvc/CreateWindow/: BaseApplication.cpp  CMakeLists.txt  CreateWindow.cpp  CreateWindow.vcxproj  CreateWindow.vcxproj.filters  MyApplication.h
tests/msvc/Test_1/: Test_1.vcxproj
